[package]
name = "piston-editor"
version = "0.3.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["editor", "interface", "piston"]
description = "Editor interface"
license = "MIT"
repository = "https://github.com/PistonDevelopers/editor.git"
homepage = "https://github.com/PistonDevelopers/editor"

[lib]
name = "editor"
path = "./src/lib.rs"
